--- a/web/themes/custom/talovi_theme/css/layout/layout.css
+++ b/web/themes/custom/talovi_theme/css/layout/layout.css
@@ -37,7 +37,7 @@
 
 .main-content main .container,
 #main-content main .container {
-  max-width: 860px;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 0;
 }
@@ -338,7 +338,7 @@ section {
    ============================================================ */
 
 main .container {
-  max-width: 860px;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 0;
 }
